src/main.output
Terminals unused in grammar

   K_BREAK
   K_CASE
   K_CONTINUE
   K_DEFAULT
   K_GOTO
   K_SWITCH
   SIZEOF
   QM
   COLON
   LABEL


State 0 conflicts: 1 shift/reduce
State 10 conflicts: 1 shift/reduce
State 13 conflicts: 1 shift/reduce
State 25 conflicts: 1 shift/reduce
State 26 conflicts: 1 shift/reduce
State 49 conflicts: 1 shift/reduce
State 50 conflicts: 1 shift/reduce
State 51 conflicts: 1 shift/reduce
State 53 conflicts: 1 shift/reduce
State 54 conflicts: 1 shift/reduce
State 66 conflicts: 1 shift/reduce
State 72 conflicts: 1 shift/reduce
State 115 conflicts: 1 shift/reduce
State 148 conflicts: 1 shift/reduce
State 149 conflicts: 1 shift/reduce
State 150 conflicts: 1 shift/reduce
State 162 conflicts: 1 shift/reduce
State 163 conflicts: 1 shift/reduce
State 164 conflicts: 1 shift/reduce
State 165 conflicts: 1 shift/reduce
State 166 conflicts: 1 shift/reduce
State 173 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program statement
    3        | statement

    4 program_empty: program
    5              | %empty

    6 lb_scope: LB

    7 statement: expression SEMICOLON
    8          | declaration SEMICOLON
    9          | lb_scope program RB
   10          | return_statement
   11          | if_else_condition
   12          | if_condition
   13          | for_statement
   14          | while_statement
   15          | do_while_statement
   16          | function_declaration_statement
   17          | output_statement

   18 function_declaration_statement: type IDENTIFIER LP RP lb_scope program_empty RB

   19 output_statement: K_OUTPUT LP expression RP SEMICOLON

   20 if_condition: K_IF LP bool_expression RP statement

   21 if_else_condition: K_IF LP bool_expression RP statement K_ELSE statement

   22 for_statement: K_FOR LP expression SEMICOLON bool_expression SEMICOLON expression RP statement

   23 while_statement: K_WHILE LP bool_expression RP statement

   24 do_while_statement: K_DO lb_scope statement RB K_WHILE LP bool_expression RP SEMICOLON

   25 return_statement: K_RET expression SEMICOLON

   26 declaration: type id_list

   27 type: T_INT
   28     | T_BOOL
   29     | T_CHAR
   30     | T_STRING
   31     | T_DOUBLE
   32     | T_VOID

   33 id_list: id_pair
   34        | id_list COMMA id_pair

   35 id_pair: id_prefix ASSIGN expression
   36        | id_prefix

   37 id_prefix: IDENTIFIER

   38 bool_expression: expression

   39 expression: assignment
   40           | expression LP expression RP
   41           | expression COMMA assignment
   42           | %empty

   43 assignment: logical
   44           | node LSHFTAS logical
   45           | node RSHFTAS logical
   46           | node MULAS logical
   47           | node DIVAS logical
   48           | node MODAS logical
   49           | node ADDAS logical
   50           | node SUBAS logical
   51           | node BANDAS logical
   52           | node BXORAS logical
   53           | node BORAS logical
   54           | node ASSIGN assignment

   55 logical: comparative
   56        | logical LAND comparative
   57        | logical LOR comparative

   58 comparative: additive
   59            | comparative LESS additive
   60            | comparative LESSEQ additive
   61            | comparative MORE additive
   62            | comparative MOREEQ additive
   63            | comparative EQ additive
   64            | comparative NE additive

   65 additive: multiplicative
   66         | additive ADD multiplicative
   67         | additive SUB multiplicative
   68         | additive BAND multiplicative
   69         | additive BXOR multiplicative
   70         | additive BOR multiplicative
   71         | ADD multiplicative
   72         | SUB multiplicative

   73 multiplicative: bitshift
   74               | multiplicative MUL bitshift
   75               | multiplicative DIV bitshift
   76               | multiplicative MOD bitshift

   77 bitshift: bitbinary
   78         | bitshift LSHFT bitbinary
   79         | bitshift RSHFT bitbinary

   80 bitbinary: postfix
   81          | NOT bitbinary
   82          | BREV bitbinary

   83 postfix: cast
   84        | INC postfix
   85        | DEC postfix
   86        | BAND node

   87 cast: LP expression RP
   88     | node

   89 node: IDENTIFIER
   90     | SYMBOL


Terminals, with rules where they appear

$end (0) 0
error (256)
T_CHAR (258) 29
T_INT (259) 27
T_DOUBLE (260) 31
T_VOID (261) 32
T_STRING (262) 30
T_BOOL (263) 28
K_BREAK (264)
K_CASE (265)
K_CONTINUE (266)
K_DEFAULT (267)
K_DO (268) 24
K_ELSE (269) 21
K_FOR (270) 22
K_GOTO (271)
K_IF (272) 20 21
K_RET (273) 25
K_SWITCH (274)
K_WHILE (275) 23 24
K_OUTPUT (276) 19
LP (277) 18 19 20 21 22 23 24 40 87
RP (278) 18 19 20 21 22 23 24 40 87
INC (279) 84
DEC (280) 85
SIZEOF (281)
NOT (282) 81
BREV (283) 82
LSHFT (284) 78
RSHFT (285) 79
MUL (286) 74
DIV (287) 75
MOD (288) 76
ADD (289) 66 71
SUB (290) 67 72
BAND (291) 68 86
BXOR (292) 69
BOR (293) 70
LESS (294) 59
LESSEQ (295) 60
MORE (296) 61
MOREEQ (297) 62
EQ (298) 63
NE (299) 64
LAND (300) 56
LOR (301) 57
QM (302)
COLON (303)
LSHFTAS (304) 44
RSHFTAS (305) 45
MULAS (306) 46
DIVAS (307) 47
MODAS (308) 48
ADDAS (309) 49
SUBAS (310) 50
BANDAS (311) 51
BXORAS (312) 52
BORAS (313) 53
ASSIGN (314) 35 54
COMMA (315) 34 41
SEMICOLON (316) 7 8 19 22 24 25
LABEL (317)
SYMBOL (318) 90
IDENTIFIER (319) 18 37 89
LB (320) 6
RB (321) 9 18 24
IFX (322)
UMINUS (323)
UADD (324)


Nonterminals, with rules where they appear

$accept (70)
    on left: 0
start (71)
    on left: 1, on right: 0
program (72)
    on left: 2 3, on right: 1 2 4 9
program_empty (73)
    on left: 4 5, on right: 18
lb_scope (74)
    on left: 6, on right: 9 18 24
statement (75)
    on left: 7 8 9 10 11 12 13 14 15 16 17, on right: 2 3 20 21 22
    23 24
function_declaration_statement (76)
    on left: 18, on right: 16
output_statement (77)
    on left: 19, on right: 17
if_condition (78)
    on left: 20, on right: 12
if_else_condition (79)
    on left: 21, on right: 11
for_statement (80)
    on left: 22, on right: 13
while_statement (81)
    on left: 23, on right: 14
do_while_statement (82)
    on left: 24, on right: 15
return_statement (83)
    on left: 25, on right: 10
declaration (84)
    on left: 26, on right: 8
type (85)
    on left: 27 28 29 30 31 32, on right: 18 26
id_list (86)
    on left: 33 34, on right: 26 34
id_pair (87)
    on left: 35 36, on right: 33 34
id_prefix (88)
    on left: 37, on right: 35 36
bool_expression (89)
    on left: 38, on right: 20 21 22 23 24
expression (90)
    on left: 39 40 41 42, on right: 7 19 22 25 35 38 40 41 87
assignment (91)
    on left: 43 44 45 46 47 48 49 50 51 52 53 54, on right: 39 41 54
logical (92)
    on left: 55 56 57, on right: 43 44 45 46 47 48 49 50 51 52 53 56
    57
comparative (93)
    on left: 58 59 60 61 62 63 64, on right: 55 56 57 59 60 61 62 63
    64
additive (94)
    on left: 65 66 67 68 69 70 71 72, on right: 58 59 60 61 62 63 64
    66 67 68 69 70
multiplicative (95)
    on left: 73 74 75 76, on right: 65 66 67 68 69 70 71 72 74 75 76
bitshift (96)
    on left: 77 78 79, on right: 73 74 75 76 78 79
bitbinary (97)
    on left: 80 81 82, on right: 77 78 79 81 82
postfix (98)
    on left: 83 84 85 86, on right: 80 84 85
cast (99)
    on left: 87 88, on right: 83
node (100)
    on left: 89 90, on right: 44 45 46 47 48 49 50 51 52 53 54 86 88


State 0

    0 $accept: . start $end

    T_CHAR      shift, and go to state 1
    T_INT       shift, and go to state 2
    T_DOUBLE    shift, and go to state 3
    T_VOID      shift, and go to state 4
    T_STRING    shift, and go to state 5
    T_BOOL      shift, and go to state 6
    K_DO        shift, and go to state 7
    K_FOR       shift, and go to state 8
    K_IF        shift, and go to state 9
    K_RET       shift, and go to state 10
    K_WHILE     shift, and go to state 11
    K_OUTPUT    shift, and go to state 12
    LP          shift, and go to state 13
    INC         shift, and go to state 14
    DEC         shift, and go to state 15
    NOT         shift, and go to state 16
    BREV        shift, and go to state 17
    ADD         shift, and go to state 18
    SUB         shift, and go to state 19
    BAND        shift, and go to state 20
    SYMBOL      shift, and go to state 21
    IDENTIFIER  shift, and go to state 22
    LB          shift, and go to state 23

    LP        [reduce using rule 42 (expression)]
    $default  reduce using rule 42 (expression)

    start                           go to state 24
    program                         go to state 25
    lb_scope                        go to state 26
    statement                       go to state 27
    function_declaration_statement  go to state 28
    output_statement                go to state 29
    if_condition                    go to state 30
    if_else_condition               go to state 31
    for_statement                   go to state 32
    while_statement                 go to state 33
    do_while_statement              go to state 34
    return_statement                go to state 35
    declaration                     go to state 36
    type                            go to state 37
    expression                      go to state 38
    assignment                      go to state 39
    logical                         go to state 40
    comparative                     go to state 41
    additive                        go to state 42
    multiplicative                  go to state 43
    bitshift                        go to state 44
    bitbinary                       go to state 45
    postfix                         go to state 46
    cast                            go to state 47
    node                            go to state 48


State 1

   29 type: T_CHAR .

    $default  reduce using rule 29 (type)


State 2

   27 type: T_INT .

    $default  reduce using rule 27 (type)


State 3

   31 type: T_DOUBLE .

    $default  reduce using rule 31 (type)


State 4

   32 type: T_VOID .

    $default  reduce using rule 32 (type)


State 5

   30 type: T_STRING .

    $default  reduce using rule 30 (type)


State 6

   28 type: T_BOOL .

    $default  reduce using rule 28 (type)


State 7

   24 do_while_statement: K_DO . lb_scope statement RB K_WHILE LP bool_expression RP SEMICOLON

    LB  shift, and go to state 23

    lb_scope  go to state 49


State 8

   22 for_statement: K_FOR . LP expression SEMICOLON bool_expression SEMICOLON expression RP statement

    LP  shift, and go to state 50


State 9

   20 if_condition: K_IF . LP bool_expression RP statement
   21 if_else_condition: K_IF . LP bool_expression RP statement K_ELSE statement

    LP  shift, and go to state 51


State 10

   25 return_statement: K_RET . expression SEMICOLON

    LP          shift, and go to state 13
    INC         shift, and go to state 14
    DEC         shift, and go to state 15
    NOT         shift, and go to state 16
    BREV        shift, and go to state 17
    ADD         shift, and go to state 18
    SUB         shift, and go to state 19
    BAND        shift, and go to state 20
    SYMBOL      shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    LP        [reduce using rule 42 (expression)]
    $default  reduce using rule 42 (expression)

    expression      go to state 52
    assignment      go to state 39
    logical         go to state 40
    comparative     go to state 41
    additive        go to state 42
    multiplicative  go to state 43
    bitshift        go to state 44
    bitbinary       go to state 45
    postfix         go to state 46
    cast            go to state 47
    node            go to state 48


State 11

   23 while_statement: K_WHILE . LP bool_expression RP statement

    LP  shift, and go to state 53


State 12

   19 output_statement: K_OUTPUT . LP expression RP SEMICOLON

    LP  shift, and go to state 54


State 13

   87 cast: LP . expression RP

    LP          shift, and go to state 13
    INC         shift, and go to state 14
    DEC         shift, and go to state 15
    NOT         shift, and go to state 16
    BREV        shift, and go to state 17
    ADD         shift, and go to state 18
    SUB         shift, and go to state 19
    BAND        shift, and go to state 20
    SYMBOL      shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    LP        [reduce using rule 42 (expression)]
    $default  reduce using rule 42 (expression)

    expression      go to state 55
    assignment      go to state 39
    logical         go to state 40
    comparative     go to state 41
    additive        go to state 42
    multiplicative  go to state 43
    bitshift        go to state 44
    bitbinary       go to state 45
    postfix         go to state 46
    cast            go to state 47
    node            go to state 48


State 14

   84 postfix: INC . postfix

    LP          shift, and go to state 13
    INC         shift, and go to state 14
    DEC         shift, and go to state 15
    BAND        shift, and go to state 20
    SYMBOL      shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    postfix  go to state 56
    cast     go to state 47
    node     go to state 57


State 15

   85 postfix: DEC . postfix

    LP          shift, and go to state 13
    INC         shift, and go to state 14
    DEC         shift, and go to state 15
    BAND        shift, and go to state 20
    SYMBOL      shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    postfix  go to state 58
    cast     go to state 47
    node     go to state 57


State 16

   81 bitbinary: NOT . bitbinary

    LP          shift, and go to state 13
    INC         shift, and go to state 14
    DEC         shift, and go to state 15
    NOT         shift, and go to state 16
    BREV        shift, and go to state 17
    BAND        shift, and go to state 20
    SYMBOL      shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    bitbinary  go to state 59
    postfix    go to state 46
    cast       go to state 47
    node       go to state 57


State 17

   82 bitbinary: BREV . bitbinary

    LP          shift, and go to state 13
    INC         shift, and go to state 14
    DEC         shift, and go to state 15
    NOT         shift, and go to state 16
    BREV        shift, and go to state 17
    BAND        shift, and go to state 20
    SYMBOL      shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    bitbinary  go to state 60
    postfix    go to state 46
    cast       go to state 47
    node       go to state 57


State 18

   71 additive: ADD . multiplicative

    LP          shift, and go to state 13
    INC         shift, and go to state 14
    DEC         shift, and go to state 15
    NOT         shift, and go to state 16
    BREV        shift, and go to state 17
    BAND        shift, and go to state 20
    SYMBOL      shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    multiplicative  go to state 61
    bitshift        go to state 44
    bitbinary       go to state 45
    postfix         go to state 46
    cast            go to state 47
    node            go to state 57


State 19

   72 additive: SUB . multiplicative

    LP          shift, and go to state 13
    INC         shift, and go to state 14
    DEC         shift, and go to state 15
    NOT         shift, and go to state 16
    BREV        shift, and go to state 17
    BAND        shift, and go to state 20
    SYMBOL      shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    multiplicative  go to state 62
    bitshift        go to state 44
    bitbinary       go to state 45
    postfix         go to state 46
    cast            go to state 47
    node            go to state 57


State 20

   86 postfix: BAND . node

    SYMBOL      shift, and go to state 21
    IDENTIFIER  shift, and go to state 22

    node  go to state 63


State 21

   90 node: SYMBOL .

    $default  reduce using rule 90 (node)


State 22

   89 node: IDENTIFIER .

    $default  reduce using rule 89 (node)


State 23

    6 lb_scope: LB .

    $default  reduce using rule 6 (lb_scope)


State 24

    0 $accept: start . $end

    $end  shift, and go to state 64


State 25

    1 start: program .
    2 program: program . statement

    T_CHAR      shift, and go to state 1
    T_INT       shift, and go to state 2
    T_DOUBLE    shift, and go to state 3
    T_VOID      shift, and go to state 4
    T_STRING    shift, and go to state 5
    T_BOOL      shift, and go to state 6
    K_DO        shift, and go to state 7
    K_FOR       shift, and go to state 8
    K_IF        shift, and go to state 9
    K_RET       shift, and go to state 10
    K_WHILE     shift, and go to state 11
    K_OUTPUT    shift, and go to state 12
    LP          shift, and go to state 13
    INC         shift, and go to state 14
    DEC         shift, and go to state 15
    NOT         shift, and go to state 16
    BREV        shift, and go to state 17
    ADD         shift, and go to state 18
    SUB         shift, and go to state 19
    BAND        shift, and go to state 20
    SYMBOL      shift, and go to state 21
    IDENTIFIER  shift, and go to state 22
    LB          shift, and go to state 23

    $end      reduce using rule 1 (start)
    LP        [reduce using rule 42 (expression)]
    $default  reduce using rule 42 (expression)

    lb_scope                        go to state 26
    statement                       go to state 65
    function_declaration_statement  go to state 28
    output_statement                go to state 29
    if_condition                    go to state 30
    if_else_condition               go to state 31
    for_statement                   go to state 32
    while_statement                 go to state 33
    do_while_statement              go to state 34
    return_statement                go to state 35
    declaration                     go to state 36
    type                            go to state 37
    expression                      go to state 38
    assignment                      go to state 39
    logical                         go to state 40
    comparative                     go to state 41
    additive                        go to state 42
    multiplicative                  go to state 43
    bitshift                        go to state 44
    bitbinary                       go to state 45
    postfix                         go to state 46
    cast                            go to state 47
    node                            go to state 48


State 26

    9 statement: lb_scope . program RB

    T_CHAR      shift, and go to state 1
    T_INT       shift, and go to state 2
    T_DOUBLE    shift, and go to state 3
    T_VOID      shift, and go to state 4
    T_STRING    shift, and go to state 5
    T_BOOL      shift, and go to state 6
    K_DO        shift, and go to state 7
    K_FOR       shift, and go to state 8
    K_IF        shift, and go to state 9
    K_RET       shift, and go to state 10
    K_WHILE     shift, and go to state 11
    K_OUTPUT    shift, and go to state 12
    LP          shift, and go to state 13
    INC         shift, and go to state 14
    DEC         shift, and go to state 15
    NOT         shift, and go to state 16
    BREV        shift, and go to state 17
    ADD         shift, and go to state 18
    SUB         shift, and go to state 19
    BAND        shift, and go to state 20
    SYMBOL      shift, and go to state 21
    IDENTIFIER  shift, and go to state 22
    LB          shift, and go to state 23

    LP        [reduce using rule 42 (expression)]
    $default  reduce using rule 42 (expression)

    program                         go to state 66
    lb_scope                        go to state 26
    statement                       go to state 27
    function_declaration_statement  go to state 28
    output_statement                go to state 29
    if_condition                    go to state 30
    if_else_condition               go to state 31
    for_statement                   go to state 32
    while_statement                 go to state 33
    do_while_statement              go to state 34
    return_statement                go to state 35
    declaration                     go to state 36
    type                            go to state 37
    expression                      go to state 38
    assignment                      go to state 39
    logical                         go to state 40
    comparative                     go to state 41
    additive                        go to state 42
    multiplicative                  go to state 43
    bitshift                        go to state 44
    bitbinary                       go to state 45
    postfix                         go to state 46
    cast                            go to state 47
    node                            go to state 48


State 27

    3 program: statement .

    $default  reduce using rule 3 (program)


State 28

   16 statement: function_declaration_statement .

    $default  reduce using rule 16 (statement)


State 29

   17 statement: output_statement .

    $default  reduce using rule 17 (statement)


State 30

   12 statement: if_condition .

    $default  reduce using rule 12 (statement)


State 31

   11 statement: if_else_condition .

    $default  reduce using rule 11 (statement)


State 32

   13 statement: for_statement .

    $default  reduce using rule 13 (statement)


State 33

   14 statement: while_statement .

    $default  reduce using rule 14 (statement)


State 34

   15 statement: do_while_statement .

    $default  reduce using rule 15 (statement)


State 35

   10 statement: return_statement .

    $default  reduce using rule 10 (statement)


State 36

    8 statement: declaration . SEMICOLON

    SEMICOLON  shift, and go to state 67


State 37

   18 function_declaration_statement: type . IDENTIFIER LP RP lb_scope program_empty RB
   26 declaration: type . id_list

    IDENTIFIER  shift, and go to state 68

    id_list    go to state 69
    id_pair    go to state 70
    id_prefix  go to state 71


State 38

    7 statement: expression . SEMICOLON
   40 expression: expression . LP expression RP
   41           | expression . COMMA assignment

    LP         shift, and go to state 72
    COMMA      shift, and go to state 73
    SEMICOLON  shift, and go to state 74


State 39

   39 expression: assignment .

    $default  reduce using rule 39 (expression)


State 40

   43 assignment: logical .
   56 logical: logical . LAND comparative
   57        | logical . LOR comparative

    LAND  shift, and go to state 75
    LOR   shift, and go to state 76

    $default  reduce using rule 43 (assignment)


State 41

   55 logical: comparative .
   59 comparative: comparative . LESS additive
   60            | comparative . LESSEQ additive
   61            | comparative . MORE additive
   62            | comparative . MOREEQ additive
   63            | comparative . EQ additive
   64            | comparative . NE additive

    LESS    shift, and go to state 77
    LESSEQ  shift, and go to state 78
    MORE    shift, and go to state 79
    MOREEQ  shift, and go to state 80
    EQ      shift, and go to state 81
    NE      shift, and go to state 82

    $default  reduce using rule 55 (logical)


State 42

   58 comparative: additive .
   66 additive: additive . ADD multiplicative
   67         | additive . SUB multiplicative
   68         | additive . BAND multiplicative
   69         | additive . BXOR multiplicative
   70         | additive . BOR multiplicative

    ADD   shift, and go to state 83
    SUB   shift, and go to state 84
    BAND  shift, and go to state 85
    BXOR  shift, and go to state 86
    BOR   shift, and go to state 87

    $default  reduce using rule 58 (comparative)


State 43

   65 additive: multiplicative .
   74 multiplicative: multiplicative . MUL bitshift
   75               | multiplicative . DIV bitshift
   76               | multiplicative . MOD bitshift

    MUL  shift, and go to state 88
    DIV  shift, and go to state 89
    MOD  shift, and go to state 90

    $default  reduce using rule 65 (additive)


State 44

   73 multiplicative: bitshift .
   78 bitshift: bitshift . LSHFT bitbinary
   79         | bitshift . RSHFT bitbinary

    LSHFT  shift, and go to state 91
    RSHFT  shift, and go to state 92

    $default  reduce using rule 73 (multiplicative)


State 45

   77 bitshift: bitbinary .

    $default  reduce using rule 77 (bitshift)


State 46

   80 bitbinary: postfix .

    $default  reduce using rule 80 (bitbinary)


State 47

   83 postfix: cast .

    $default  reduce using rule 83 (postfix)


State 48
